--- a/week4/package.json
+++ b/week4/package.json
@@ -16,6 +16,10 @@
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
     "@vitejs/plugin-react": "^2.2.0",
+    "msw": "^0.47.4",
     "vite": "^3.2.0"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
